# actix-web-utils

./: Cargo.toml  Readme.md
src/: lib.rs
src/dtos/: message.rs
src/enums/: error.rs  macro_enums.rs  mod.rs
src/extensions/: generic_error.rs  mod.rs  read_body.rs  typed_response.rs
src/traits/: macro_traits.rs  mod.rs
src/utils/: logger_util.rs  macros.rs  mod.rs
