[package]
name = "actix-web-utils"
version = "0.1.0"
edition = "2021"
authors = ["Franklin E. Blanco"]
description = "Just some useful addons for actix web."
license = "MIT"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
serde_json = { version = "1" }
serde = { version = "1.0", features = ["derive"] }