[package]
name = "actix-web-utils"
version = "0.1.7"
edition = "2021"
authors = ["Franklin E. Blanco"]
description = "Just some useful addons for actix web."
license = "MIT"

[lib]

[dependencies]
actix-web = "4.1.0"
serde_json = { version = "1" }
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", features = ["serde"] }

env_logger = "0.9"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
pin-project = "1"