[package]
name = "actix-web-utils"
version = "0.2.5"
edition = "2021"
authors = ["Franklin E. Blanco"]
description = "Just some useful addons for actix web."
license = "MIT"
readme = "README.md"
repository = "https://github.com/franklinblanco/actix-web-utils"

[lib]

[dependencies]
actix-web = "4.1.0"
serde_json = { version = "1" }
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", features = ["serde"] }